<resources>
    <string name="app_name">Animal Know</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="animal_know">Animal Know</string>
    <string name="record">RECORD</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="result">Result :</string>
    <string name="log_in">Log in</string>
    <string name="username1">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in1">Log in</string>
    <string name="create_account">Create new account</string>
    <string name="info">Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_view_deletable">INFO VIEW</string>
    <string name="profile_view_deletable">PROFILE VIEW</string>
    <string name="stats_view_deletable">STATS VIEW</string>
    <string name="home_fragment_delete">HOME FRAGMENT</string>
    <string name="model_info">YAMNet Machine Learning Model Information</string>
    <string name="animalisten">AnimaListen</string>
    <string name="model_webpage">https://www.tensorflow.org/hub/tutorials/yamnet</string>
    <string name="animal_recognition">Animal Recognition</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirmLogout">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="forgot_password">Reset Password?</string>
    <string name="emailHint">Email</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="uta_id">UTA ID</string>
    <string name="profession">Profession</string>
    <string name="edit_information">Edit Information</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save</string>
    <string name="learn_more">Learn More</string>
    <string name="discover_yamnet">discover YAMNet</string>
    <string name="resultClassification">Result:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="welcome_to_animalisten">Welcome to AnimaListen!</string>
    <string name="learn_more2">Learn More!</string>
    <string name="animal_knoww">Animal Know</string>
</resources>