<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="#FFCC00"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="#FFFFCC"
        android:textSize="58sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="58dp"/>
    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="@string/username1"
        android:textSize="25sp"
        android:maxLength="25"
        android:textColorHint="#2B2929"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="38dp"
        android:paddingStart="28dp"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textSize="25sp"
        android:maxLength="25"
        android:textColorHint="#2B2929"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="38dp"
        android:paddingStart="28dp"/>

    <Button
        android:id="@+id/login1"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/log_in1"
        android:textColor="#FFCC00"
        android:textSize="28sp"
        android:backgroundTint="#FFFFCC"
        android:layout_marginBottom="38dp"/>

    <Button
        android:id="@+id/signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="#FFCC00"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

</LinearLayout>