<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#FFCC00"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmLogout"
        android:textSize="18sp"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/dialog_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFCC"
        android:textColor="#333333"
        android:layout_gravity="center"
        android:text="@string/yes"/>

    <Button
        android:id="@+id/dialog_no"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFCC"
        android:textColor="#333333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"/>
</LinearLayout>